--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
           <div class="h-full flex sm:flex-row flex-col items-center sm:justify-start justify-center text-center sm:text-left">
             <img alt="team" class="flex-shrink-0 rounded-lg w-48 h-48 object-cover object-center sm:mb-0 mb-4" src="https://dummyimage.com/200x200">
             <div class="flex-grow sm:pl-8">
-              <h2 class="title-font font-medium text-lg text-white">Parth Khansali</h2>
+              <h2 class="title-font font-medium text-lg text-white">Divyanshi</h2>
               <h3 class="text-gray-500 mb-3">UI Developer</h3>
               <p class="mb-4">Ain't no need for UI cause we didn't make any app</p>
               <span class="inline-flex">
@@ -141,7 +141,7 @@
           <div class="h-full flex sm:flex-row flex-col items-center sm:justify-start justify-center text-center sm:text-left">
             <img alt="team" class="flex-shrink-0 rounded-lg w-48 h-48 object-cover object-center sm:mb-0 mb-4" src="https://dummyimage.com/201x201">
             <div class="flex-grow sm:pl-8">
-              <h2 class="title-font font-medium text-lg text-white">Parth Khansali</h2>
+              <h2 class="title-font font-medium text-lg text-white">Divyanshi</h2>
               <h3 class="text-gray-500 mb-3">Designer</h3>
               <p class="mb-4">We Can saythis was done by me kind of</p>
               <span class="inline-flex">
@@ -168,7 +168,7 @@
           <div class="h-full flex sm:flex-row flex-col items-center sm:justify-start justify-center text-center sm:text-left">
             <img alt="team" class="flex-shrink-0 rounded-lg w-48 h-48 object-cover object-center sm:mb-0 mb-4" src="https://dummyimage.com/204x204">
             <div class="flex-grow sm:pl-8">
-              <h2 class="title-font font-medium text-lg text-white">Parth Khansali</h2>
+              <h2 class="title-font font-medium text-lg text-white">Divyanshu</h2>
               <h3 class="text-gray-500 mb-3">UI Developer</h3>
               <p class="mb-4">Yuh definitely me</p>
               <span class="inline-flex">
@@ -195,7 +195,7 @@
           <div class="h-full flex sm:flex-row flex-col items-center sm:justify-start justify-center text-center sm:text-left">
             <img alt="team" class="flex-shrink-0 rounded-lg w-48 h-48 object-cover object-center sm:mb-0 mb-4" src="https://dummyimage.com/206x206">
             <div class="flex-grow sm:pl-8">
-              <h2 class="title-font font-medium text-lg text-white">Parth Khansali</h2>
+              <h2 class="title-font font-medium text-lg text-white">D</h2>
               <h3 class="text-gray-500 mb-3">Coder</h3>
               <p class="mb-4">This to me</p>
               <span class="inline-flex">
