--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
             <div class="w-48 h-48 mx-auto overflow-hidden rounded-lg mb-4">
               <img loading="lazy" class="w-full h-full object-cover" src="https://images.unsplash.com/photo-1603415526960-f7e0328f9b90" alt="Team Member 2">
             </div>
-            <h2 class="text-lg text-gray-900 font-medium title-font mb-2">Divyanshu</h2>
+            <h2 class="text-lg text-gray-900 font-medium title-font mb-2">Divyanshu & Divyanshi</h2>
             <p class="leading-relaxed text-base">Developer</p>
           </div>
         </div>
@@ -95,7 +95,7 @@
             <div class="w-48 h-48 mx-auto overflow-hidden rounded-lg mb-4">
               <img loading="lazy" class="w-full h-full object-cover" src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.ubuy.co.in%2Fproduct%2FG11QLM4U6-ngcjzf-kawaii-kuromi-bag-cute-cartoon-kuromi-shoulder-bag-my-melody-anime-wallet-kuromi-accessories-for-girls-birthday-gifts&psig=AOvVaw324ZAXkx18zkP_TJahqK2J&ust=1747930612423000&source=images&cd=vfe&opi=89978449&ved=0CBQQjRxqFwoTCNi2roz7tI0DFQAAAAAdAAAAABAE" alt="Team Member 3">
             </div>
-            <h2 class="text-lg text-gray-900 font-medium title-font mb-2">Ayush</h2>
+            <h2 class="text-lg text-gray-900 font-medium title-font mb-2">Divyanshu & Ayush</h2>
             <p class="leading-relaxed text-base">Designer</p>
           </div>
         </div>
@@ -106,7 +106,7 @@
             <div class="w-48 h-48 mx-auto overflow-hidden rounded-lg mb-4">
               <img loading="lazy" class="w-full h-full object-cover" src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.ubuy.co.in%2Fproduct%2FG11QLM4U6-ngcjzf-kawaii-kuromi-bag-cute-cartoon-kuromi-shoulder-bag-my-melody-anime-wallet-kuromi-accessories-for-girls-birthday-gifts&psig=AOvVaw324ZAXkx18zkP_TJahqK2J&ust=1747930612423000&source=images&cd=vfe&opi=89978449&ved=0CBQQjRxqFwoTCNi2roz7tI0DFQAAAAAdAAAAABAE" alt="Team Member 4">
             </div>
-            <h2 class="text-lg text-gray-900 font-medium title-font mb-2">Kartik</h2>
+            <h2 class="text-lg text-gray-900 font-medium title-font mb-2">Ayush & Kartik</h2>
             <p class="leading-relaxed text-base">Marketing Head</p>
           </div>
         </div>
